force-app/main/default/objects/Assistant__c/Assistant__c.object-meta.xml
<CustomObject>
    <label>Assistant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assistants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>