force-app/main/default/objects/Assistant__c/fields/ChatGPT_Id__c.field-meta.xml
<CustomField>
    <fullName>ChatGPT_Id__c</fullName>
    <label>ChatGPT Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>