force-app/main/default/objects/Assistant__c/fields/Code_Interpreter__c.field-meta.xml
<CustomField>
    <fullName>Code_Interpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Code Interpreter enables the assistant to write and run code. This tool can process files with diverse data and formatting, and generate files such as graphs</inlineHelpText>
    <label>Code Interpreter</label>
    <type>Checkbox</type>
</CustomField>