force-app/main/default/objects/Assistant__c/fields/File_Ids__c.field-meta.xml
<CustomField>
    <fullName>File_Ids__c</fullName>
    <label>File Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>