force-app/main/default/objects/Assistant__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gpt-4-turbo-preview</fullName>
            </value>
            <value>
                <fullName>gpt-4</fullName>
            </value>
            <value>
                <fullName>gpt-4-1106-preview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>