force-app/main/default/objects/Assistant__c/fields/Retrieval__c.field-meta.xml
<CustomField>
    <fullName>Retrieval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Retrieval enables the assistant with knowledge from files that you or your users upload. Once a file is uploaded, the assistant automatically decides when to retrieve content based on user requests</inlineHelpText>
    <label>Retrieval</label>
    <type>Checkbox</type>
</CustomField>